src/test/ui/parser/keyword-break-as-identifier.stderr
error: expected identifier, found keyword `break`
  --> $DIR/keyword-break-as-identifier.rs:4:9
   |
LL |     let break = "foo";
   |         ^^^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#break = "foo";
   |         ^^^^^^^

error: aborting due to previous error

